--- a/OneWiki/data/Evil Group Notes.wiki
+++ b/OneWiki/data/Evil Group Notes.wiki
@@ -8,7 +8,7 @@
 XXXXXXX XXXXXXX
 XXXXXXX XXXXXXX
 XXXXXXX XXXXXXX
-XXXXXXX XX
+XXXXXXX XX|XX       taxes of 3 helms deep
 
 ++++Evil Session 2 Notes:
 The crew had supplied food to tide over the refugee camp for a few days before they persuaded the [Marines] to let them join along when they departed.
@@ -257,11 +257,61 @@ Battle with [Robert Culliford]'s crew:
 -Maps to places not traveled yet on Roberts ship
 -looted 2000g 
      
-Carpenters guild improving Grogar's carpenter's quarterstaff with shark 6 large teeth     
-    
+Carpenters guild improving Grogar's carpenter's quarterstaff with shark 26 large teeth  
+- 2 days left
+- +1 damage slashing
+       
     Sold to Shirrong
     18g studded leather x4  (gnomish)
     7s dagger   x35
     3g short sword  x61
     25g chainmail  x52
     9g shortbow  x61
+    
+++++Session 22
+Greg drops to 4 CON
+Kerri drops to 4 CON    
+    
+Ghan Bopps moves to do business from the North Docks of 3 Helms Deep at one of the warehouses
+
+Island Bird (raven) xxxxxx xxx xxxx xxxxx xxxxxx xxxx xxxxx xxx xxxxxx xxxxxx xxxxx xxxxx
+commoner x
+  
+Mumified left leg of Tharizdun found on the island east of the north island
+fisherman is given 2g to not tell that the group took the left leg of Tharizdun
+3g for 3 boxes
+
+empty island
+
+next fisherman is told his fish was better than the last
+
+friendly fisherman, Edan gave 5 gold to improve his house
+Mumified right and left arm of Tharizdun
+
+bigger east island:
+-small fancy fisherman
+-big fewer fisherman
+
+burnt down home
+
+bornt down home
+Mummified right leg of Tharizdun
+
+vacant fisherman's house
+empty island
+
+Lian - killed upon not recognizing king tri helm
+
+west gryphon island
+-3 gryphon eggs acquired
+-mummified head of Tharizdun
+
+empty island
+
+15g given to fisherwoman who lost a significant other in the battle of 3 Helms Deep
+-told to move to the main island due to risk of Gryphons
+-Torso of Tharizdun
+
+leaving 17g in exchange for some boxes
+
+hunting elk on the main island, 4 killed, 2 knocked out.
