--- a/OneWiki/data/Marines.wiki
+++ b/OneWiki/data/Marines.wiki
@@ -13,6 +13,7 @@ currently has bounties on
 
 +++Ranks:
 Admiral (leader of the organization)
+    [Eglath Kalagiano] (goliath) 
 Vice Admirals (leaders of regions)
 Captains (leaders of vessels)
     [Bran C'Num] (half-orc) who oversees marine operations at the embassy in [Fiore]
