updating new group notes

--- a/OneWiki/data/Group Three Notes.wiki
+++ b/OneWiki/data/Group Three Notes.wiki
@@ -2,9 +2,16 @@
 
 CALENDAR
 XXXXXXX
+XXXXXXX
+XXXXXXX
+XXXXXXX
+XX
 
 KEELBOAT WORK (of 20)
-XX
+XXXX (time skip) XXXXX XXXXX XXXXX X
+
+Ship parking coverage
+XXXXXXX
 
 The group finds themselves marooned on an unknown island. Waking up after a terrible storm.
 Thier supply vessel had 3 other crewmates who are now washed ashore with them. Only these three managed to survive.
@@ -100,3 +107,21 @@ Thrasher - former mastiff that is "Doof Dog"
 Gifts at the festival
 bundle of 20 silver arrows. bear fur armor, sharpened axe, book legend of regdar, bag of feathers
 
+++++Session 6
+2 barrels of fresh water left with Nanderdar
+
+hunted 6 boars and 2 giant boars
+
+Forem - 14copper, 145lb of food for a 20lb copper smoker
+
+time skip 17 days
+
+traveling to Fiore 3 days
+-Thrasher befriended by Quinn and Shay, but not Tessa
+
+Paid 3g for looking over the ship for the next week
+
+[Daniel Milbourne] leads the group to Mayara
+
+Geth - sold the group a map of Mayara and contracted to make a map of the known world for 1g
+-takes 2 days to make the map
