--- a/OneWiki/data/Group Three Notes.wiki
+++ b/OneWiki/data/Group Three Notes.wiki
@@ -121,7 +121,7 @@ traveling to Fiore 3 days
 
 Paid 3g for looking over the ship for the next week
 
-[Daniel Milbourne] leads the group to Mayara
+Daniel leads the group to Mayara
 
-Geth - sold the group a map of Mayara and contracted to make a map of the known world for 1g
+[Geth] - sold the group a map of Mayara and contracted to make a map of the known world for 1g
 -takes 2 days to make the map
