--- a/OneWiki/data/Marine HQ.wiki
+++ b/OneWiki/data/Marine HQ.wiki
@@ -2,20 +2,71 @@
 
 Notes as a law enforcement agency, but rather operates as a lawful-good mercenary. 
 
-Contract Center
-  Privates, Officers and Captains can be hired for the rates listed on the [Marines] page
-  
-Admiral's Office of [Eglath Kalagiano]
-  A tall stone tower with a long spiral staircase that climbs up the inner edge of the tower to a large room.
-    
 North Barracks
 South Barracks
 West Barracks
 East Barracks
-    each holds about 30 marines
+    each holds about 20 marines
     
-The Grand Dock
++++The Grand Dock
+    Can build any ship as described in DM handbook PG 119 (building crew of 30 people) (150g worth per day)
+    
+    Marine Fleet:
     20 Keelboats
-    3 Warships
+    3 Warships - 4 cannons each
+    
+    
++++The Refuge District
+    Dense residential for people of all kinds, people often flee here in times of trouble.
+    
+    Sorrowed Man's Comfort - Yeller, Human(M) (from [Arabasta])
+        -ale 3c a pint
+        -bread 1s a loaf
+        
+    The Dreamer's Haven - Farshwa, Wood Elf(F) (from [Kelethin])
+        -bread 1s a loaf
+        -room 2s per night per person
+        
+    Jester's Hand Square
+        -a place where bored townsfolk gather to play card games and gamble
+            (average person has 2g on them, often 8 or so people can be found here)
+    
++++Marine District    
+    Quatermaster - Hemlock, half-elf (local born, son of Remlock(human), son of Tenlock(human). Quarter master job has been ran by his family.)    
+        -short swords
+        -shields
+        -chainmail
+        -showbow
+        -arrows
+    
+    Office of the [Order of the Gauntlet]
+        Ran by Officer Jord, Male goliath. 
+        -takes applications for being a member of the order
+        
+    Admiral's Office of [Eglath Kalagiano]
+        A tall stone tower with a long spiral staircase that climbs up the inner edge of the tower to a large room.    
+        
+    Contract Center
+        Ran by Officer Yimir, Female goliath.
+        Privates, Officers and Captains can be hired for the rates listed on the [Marines] page
+      
+    Bounty Office
+        Ran by Officer Brandon, Male high elf.
+        Claim, Place, or look at existing bounties here, noted on the [Marines] page
+        
+    Hawkmaster's Roost
+        Ran by Officer Temir
+        -Messages can be sent and received here for 5c per message sent
+        -Hawk Eggs can be baught here for 30g each
+        
+        
++++Prison District        
+    Wardens Office
+        -manned by [Marines] 4 Captains, 8 Officers, 40 Privates
+        
+    80 existing prisoners within, mostly pirates    
+    
+    
+    
     
     
