--- a/OneWiki/data/Evil Group Notes.wiki
+++ b/OneWiki/data/Evil Group Notes.wiki
@@ -8,7 +8,20 @@
 XXXXXXX XXXXXXX
 XXXXXXX XXXXXXX
 XXXXXXX XXXXXXX
-XXXXXXX XX|XX       taxes of 3 helms deep
+XXXXXXX XX|XXXXX       taxes of 3 helms deep
+
+XXXXXXX
+X
+
+250g given to Shirrong for doing an etherium inlay, silvering and Maliabilis enchantment to Grogar's Carpenter's Sharktooth Quarterstaff
+-20 days - 18 days crafting - 2 days enchanting
+XXXXXXXXXX X
+150g given to Shirrong for doing an etherium inlay, and Tempren enchantment to Edan's shield
+-11 days - 9 days crafting - 2 days enchanting
+
+
+3 carpenters to repair it over the course of 6 days for 500g
+XXXXXX
 
 ++++Evil Session 2 Notes:
 The crew had supplied food to tide over the refugee camp for a few days before they persuaded the [Marines] to let them join along when they departed.
@@ -315,3 +328,36 @@ empty island
 leaving 17g in exchange for some boxes
 
 hunting elk on the main island, 4 killed, 2 knocked out.
+
+++++Session 23
+Gryphons revisted and slain at the West island.
+-captured and taken to the north dock minagerie
+-drained equality to radiance, (-2  14 CON left)
+-killed after deliberation with Croaker
+
+Greg fully drained in front of Kerri (4 CON)
+
+Ghan Bopps goes to put in a order for iron griffin cages
+-150g each due to high taxes
+
+Edan pants into the bed of his pup with Grix
+ 
+-subsidizes the Marine upkeep
+
+-request for a floating dock at the fjord by 3 Helms Deep 
+
+Ghan Bopps
+-pluck Gryphon feathers,mount head,claws
+
+Taman to run the 3 Helms Deep bar/inn, sent with a letter from the king
+
+Depart for Ak'anon
+
+Kerri down to 3 CON from another drain
+
+Kenku messenger of Venril Sathir gives message to the group to "Stop, my inquisitors will find you, you will die"
+
+Get on the bad side of Ak'Anon and they open fire cannons
+-Carpenters repair the ship after the damage from Ak'Anon
+
+Rest for 6 days to have ship repaired
