--- a/OneWiki/data/Enchantment.wiki
+++ b/OneWiki/data/Enchantment.wiki
@@ -6,3 +6,5 @@ Scorcerer based enchantment requires no prior knowledge to perform and will have
 
 enchantment effects must be based off of themes from spells the caster is able to cast.
 enchantments based off of spells that require a material item to cast will require the target item to contain that component.
+
++2 damage for next 5 hits when passing DC 15 Enchantment skill roll
