--- a/OneWiki/data/Evil Group Crew.wiki
+++ b/OneWiki/data/Evil Group Crew.wiki
@@ -1,18 +1,17 @@
 ﻿++ Evil Group Crew
 
-20 people
-5 horses
-total food 35
+15 people
+total food 15
 
 [Dockson]
 [Anton]
-[Taman]
+[Taman] - At the 3 Helms Deep Bar/Inn
 [Marta]
 
 [Kerri]
-[Greg]
+[Greg] - DEAD
 
-[Darvin] - Human slave, used to be marine private - Proficient short sword
+[Darvin] - Human slave, used to be marine private - Proficient short sword - DEAD
 [Fargrim] - Dwarf Wizard, came from [Nowa Huta]
 [Yevelda] - Half orc dockworker - Proficient sailing
 [Thia] - Wood Elf from [Fiore] - Fisher
@@ -26,8 +25,8 @@ Kreiger
 Lightning
 Grogar
 
-3 pups
+3 pups - Left with Grix
 1 wolf
 
-5 horses  (3 lbs per day)
+5 horses  (3 lbs per day) - left at the Menagerie
 
