adding bahamut content

--- a/OneWiki/data/Bahamut.wiki
+++ b/OneWiki/data/Bahamut.wiki
@@ -4,3 +4,9 @@ God of justice and nobility (pg 10 of DM handbook)
 Lawful Good
 Oversees [Marine HQ]
 Symbol: Dragon's head, in profile, facing left
+
+
+
+a massive, long and sinuous dragon with silver-white scales and blue, catlike eyes.
+
+About a quarter of the time, Bahamut wanders in the shape of a human or some other guise. He is said to have been encountered as a frail old hermit, with the seven great golden wyrms that accompany him disguised as seven canaries singing sweetly nearby.
