--- a/OneWiki/data/Don Kreig.wiki
+++ b/OneWiki/data/Don Kreig.wiki
@@ -25,4 +25,4 @@ Ned (deceased) - killed at sea by evil group
 Morgiana (strong human female)
 Ledian (skilled half orc male)
 Kyle (strong willed human male)
-Kharl (Turtle Fruit human male 
+Kharl (Turtle Fruit human male) (captured at [Marine HQ])
