--- a/OneWiki/data/Evil Group Notes.wiki
+++ b/OneWiki/data/Evil Group Notes.wiki
@@ -331,10 +331,9 @@ Greg fully drained in front of Kerri (4 CON)
 
 Ghan Bopps goes to put in a order for iron griffin cages
 -150g each due to high taxes
+-order was then canceled
 
 Edan pants into the bed of his pup with Grix
- 
--subsidizes the Marine upkeep
 
 -request for a floating dock at the fjord by 3 Helms Deep 
 
