--- a/OneWiki/data/Fiore.wiki
+++ b/OneWiki/data/Fiore.wiki
@@ -22,7 +22,7 @@ Lush green vegetation covers the large hill of an island. The sounds of all kind
     One of the outer islands has a griffon roost (pg 174 of monster manual) home to one griffon.     
        
 +++North Dock:
-        Dock master Ghant (dwarf) runs the north dock. A rather friendly fellow. The north dock commonly has traders unloading/loading vessels from [Ak'anon], [Augsburg] and [Arabasta]. The shipwright area has a Sailing Ship (10,000g) being constructed (will finish on day 30 of the calendar). And recently took a project of repairing a former [Don Kreig] keel boat (3000g) (will finish on day 7 of the calendar) 
+        Dock master [Ghant] (dwarf) runs the north dock. A rather friendly fellow. The north dock commonly has traders unloading/loading vessels from [Ak'anon], [Augsburg] and [Arabasta]. The shipwright area has a Sailing Ship (10,000g) being constructed (will finish on day 30 of the calendar). And recently took a project of repairing a former [Don Kreig] keel boat (3000g) (will finish on day 7 of the calendar) 
         -carts borrowable for 15g, 5g returned when the cart is returned.
         
         If searched, the waters at the base of the fjord have the slightly melted [Regdars Radiant Hilt]
@@ -90,20 +90,10 @@ Places of interest in Mayara:
             sells/buys all metal based armour
             repairs all metal based armour and weapons (costs roughly 10% of the item's value)
         -herbalist, [Harris Flennre] (half-elf), common personality though a bit egotistical
-            wolfsbane (15g per lb) (smell that deters wolves)
-            mint, tea (5s per lb)
-            cloves (3g per lb)
-            cinnamon (2g per lb)
-            saffron (15g per lb)
-            nightshade (15g per lb) (poisonous)
         -exotic food vendor, [Elisha Vanesson] (human)(knows of [AkumaFruits], but tries to be secretive)
             items for sale include bananas, kiwi, cheese, grapes, cave cricket on a stick. (8sp per item (counts as a meal))          
-        -flectcher, Yanny McLougin (female halfling), redneckish personality
-            items for sale short bow (25g), long bow(50g), crossbow bolts/arrows (20x 1g), SOLD OUT: gryphon feather arrows (+1 to hit) 20x 4g)
-        -animal vendor, Ghan Bopps (dwarf) a bit smelly, but otherwise very nice, had a wanted poster out for the Fiore Griffin with the [Marines] - 436 Gold
-            2cp x lb of chicken (1d6) (5 at stall)
-            1gp per goat (2 at stall)
-            3gp per pig (2 at stall)
+        -flectcher, [Yanny McLougin] (female halfling), redneckish personality
+        -animal vendor, [Ghan Bopps] (dwarf) a bit smelly, but otherwise very nice, had a wanted poster out for the Fiore Griffin with the [Marines]
       Inn/Bar
         -5sp per night per room, includes meal for the day (modest)
         -3sp for a meal
@@ -117,7 +107,7 @@ Places of interest in Mayara:
       
       Mason's Guild (the Masos)
         This guild is comprised mostly of dwarves who work in a disciplined manner in teams making bricks and stone works of art. Other races are amungst them, excluding elves. 
-        The Mason's Guild is ran by the master mason Dirk Dagson, a stern disciplined dwarf who thinks good craftsmanship comes from colaborative learning and working with your peers. Lessons at the Mason's guild are passed down from master to students. Thinks poorly of the Carpenter's Guild. 
+        The Mason's Guild is ran by the master mason [Dirk Dagson], a stern disciplined dwarf who thinks good craftsmanship comes from colaborative learning and working with your peers. Lessons at the Mason's guild are passed down from master to students. Thinks poorly of the Carpenter's Guild. 
         
 A very happy pleasant fellow named [Geth] is a cartographer who has lived in the town for a long time and is quick to spot newcomers to sell is town maps to.
     2 silver for a map!        
