adding more notes

--- a/OneWiki/data/Dun Morhen.wiki
+++ b/OneWiki/data/Dun Morhen.wiki
@@ -25,4 +25,16 @@ Wildlife includes (monster book):
     Bulette (pg 34)
     Wyvern (pg 303)
     
+
+
+EVIL GROUP NOTE:
+    In the ancient elven ruin, is the bloody aftermath of some fierce battle. Seven corpses of elves, humans, and a half orc are about the ground. A large tapestry flies from utop an 10ft iron pole in the center (Luthadel). 
+    
+    Letho-Head is recognizable but looks as if his body melted into a black thick goo burnt solid.
+    Marren-Intense burns and charred flesh
+    Grund-Intense burns and charred flesh
+    Ferionia Vie-stabbed in the abdomen in a bush
+    Varneth-Intense burns and charred flesh
+    Martin Terratio-claw marks accross the chest
+    
     
