--- a/OneWiki/data/Foresake the Gods.wiki
+++ b/OneWiki/data/Foresake the Gods.wiki
@@ -12,3 +12,4 @@ This tome I have imbued that so long gods roam this world, one who is intelectua
 -persuasion
 -satiation
 -trickery
+-purpose deprevation
