--- a/OneWiki/data/Marine HQ.wiki
+++ b/OneWiki/data/Marine HQ.wiki
@@ -38,7 +38,14 @@ East Barracks
             [Yanny McLougin] - fletcher
             [Dirk Dagson] and fellow Masons
             Carpenters (average skilled)
-             
+            [Giana Yem] - high elf jeweler
+            
+    Actor's Theatre
+        Lead by Director [Louis Numre] with a crew of 4 other actors
+        Periodic plays for amusement:
+            -Regdar the Selfless (cheesy reinactment of the popular legend)
+            -Harmon and Sulieth (a story about a forbidden romance between Iksar and Skaa)
+            
     
 +++Marine District    
     Quatermaster - Hemlock, half-elf (local born, son of Remlock(human), son of Tenlock(human). Quarter master job has been ran by his family.)    
