adding group three notes

--- a/OneWiki/OneWiki.wiki
+++ b/OneWiki/OneWiki.wiki
@@ -5,7 +5,7 @@ data_dir = data
 wikiwidehistory_maxentries = 100
 footnotes_as_wikiwords = False
 indexsearch_enabled = False
-last_wiki_word = Foresake the Gods
+last_wiki_word = Group Three Notes
 hotkey_showhide_bywiki = 
 log_window_autoshow = Gray
 filestorage_identity_filenamemustmatch = False
@@ -28,7 +28,7 @@ wiki_lasttabssubctrls = textedit
 template_pagenamesre = ^template/
 wikipagetitle_creationmode = 1
 tabhistory_maxentries = 25
-tree_expandednodes_descriptorpathes_main = wikipage/OneWiki,wikipage/Characters,wikipage/Gorda;wikipage/OneWiki,wikipage/Books;wikipage/OneWiki,wikipage/Towns;wikipage/OneWiki,wikipage/Towns,wikipage/Marine HQ;wikipage/OneWiki,wikipage/Characters,wikipage/Fiore,wikipage/Yanny McLougin;wikipage/OneWiki,wikipage/Quests;wikipage/OneWiki;wikipage/OneWiki,wikipage/Characters,wikipage/Dun Morhen;wikipage/OneWiki,wikipage/Organizations,wikipage/Marines;wikipage/OneWiki,wikipage/Characters,wikipage/Don Kreig,wikipage/Marine HQ;wikipage/OneWiki,wikipage/Towns,wikipage/Dun Morhen;wikipage/OneWiki,wikipage/Players,wikipage/Serana
+tree_expandednodes_descriptorpathes_main = wikipage/OneWiki,wikipage/Quests;wikipage/OneWiki;wikipage/OneWiki,wikipage/Organizations,wikipage/Marines;wikipage/OneWiki,wikipage/Towns;wikipage/OneWiki,wikipage/Players,wikipage/Serana;wikipage/OneWiki,wikipage/Characters,wikipage/Don Kreig,wikipage/Marine HQ
 wiki_wikilanguage = wikidpad_default_2_0
 tree_force_scratchpad_visibility = True
 further_wiki_words = 
