--- a/OneWiki/data/Group Three Notes.wiki
+++ b/OneWiki/data/Group Three Notes.wiki
@@ -5,16 +5,28 @@ XXXXXXX
 XXXXXXX
 XXXXXXX
 XXXXXXX
-XX
 
-KEELBOAT WORK (of 20)
+XXXX
+
+KEELBOAT WORK (of 20) - DONE
 XXXX (time skip) XXXXX XXXXX XXXXX X
 
 Ship parking coverage
-XXXXXXX
+XXXXX XXXXX
 
-[Geth] Making Map of Known World
-XX
+[Geth] Making Map of Known World - DONE
+
+Payment given for crafting to Shirrong Bronzecore
+-Great Axe -2 days  - DONE
+-Half Plate -7 days - XXXXXXX
+
+Griffon Arrows x100 (20 per day)
+XXXXX
+
+Sailing Ship Completion 20 days
+XXXXXXXXXXXXXXXXXXXX
+
+
 
 The group finds themselves marooned on an unknown island. Waking up after a terrible storm.
 Thier supply vessel had 3 other crewmates who are now washed ashore with them. Only these three managed to survive.
@@ -124,3 +136,32 @@ Paid 3g for looking over the ship for the next week
 Daniel (Not Milbourne) leads the group to Mayara
 
 [Geth] - sold the group a map of Mayara and contracted to make a map of the known world for 1g
+
+++++Session 7
+Payment given for crafting to Shirrong Bronzecore
+-Great Axe -2 days
+-Half Plate -7 days
+
+Gets advice for where to find an alchemist
+
+Ivor Chernin secretary at the counter [Marines]
+
+4 Privates, and an Officer head to the ship to investigate what happened.
+-poorly done investigation, not much suspicious
+
+Head over to Ghan Bopps for the night to wait for the Gryphon
+-slay it
+-collect reward and are offered a place to stay whenever
+
+Sold 200lbs of Griffon meat to Venessa for 100g
+
+Commissions 100 griffon arrows from Yanny for 50g
+
+Go into the bar and meet with the sad woman and greatly upset her
+
+Meet with dockmaster Ghant to get info about the Sailing ship auction at the north dock
+
+Officer Quinn and 2 Privates
+passenger fee for leaving to [Ak'anon] (5s each) (2g paid per day for guard work
+
+The group rests at the Inn/Bar of [Fiore]
