--- a/OneWiki/data/Regdars Radiant Hilt.wiki
+++ b/OneWiki/data/Regdars Radiant Hilt.wiki
@@ -14,6 +14,7 @@ ADDITIONAL: lvl 2 slot (or equivalent), -20 Max HP, -1 CON
 ADDITIONAL: lvl 3 slot (or equivalent), -30 Max HP, -1 CON 
  +12 dmg Radiant damage, +2 TH, gives off light when wielded
  (can sap a permenant 1 CON from a creature for +5 DMG on next hit, stack up to 9 times, 10 minute ritual)
+ when used at max capacity, 10ft pushback (Unless STR DC 15 is passed) and 1d6 damage to user.
  
 ADDITIONAL: lvl 5 slot (or equivalent), -40 Max HP, -2 CON 
  +16 dmg Radiant damage, +3 TH, gives off light when wielded, any existing blade melts away
