--- a/OneWiki/data/Venril Sathir.wiki
+++ b/OneWiki/data/Venril Sathir.wiki
@@ -29,6 +29,7 @@ Speak with Dead
 Abilities:
 Ethereal vision, can see into the ethereal plane.
 Ethereal presence, can interact with spirits as if they were material.
+-if a creature is grappled, he can roll to hit again, if successful, the soul of the creature is pulled from it's body.
 
 
 Akumafruit:
