--- a/OneWiki/data/Enchantment.wiki
+++ b/OneWiki/data/Enchantment.wiki
@@ -1,4 +1,7 @@
 ﻿++ Enchantment
+Etherium Inlay 
+    +10 uses to use enchantments
+    +10 temporary HP to temporary HP enchantments
 
 Wizard based enchantment requires prior knowledge to perform and will have permenant effects
 
@@ -7,4 +10,12 @@ Scorcerer based enchantment requires no prior knowledge to perform and will have
 enchantment effects must be based off of themes from spells the caster is able to cast.
 enchantments based off of spells that require a material item to cast will require the target item to contain that component.
 
-+2 damage for next 5 hits when passing DC 15 Enchantment skill roll
+ +2 damage for next 5 hits when passing DC 15 Enchantment skill roll
+
+
+
+Maliabilis
+    -next 5 hits, cause a cumulative -1 AC to the target, -2 AC if the target is metal
+    
+Tempren
+    -10 Temporary HP
