--- a/OneWiki/data/Dun Morhen.wiki
+++ b/OneWiki/data/Dun Morhen.wiki
@@ -1,5 +1,7 @@
 ﻿++ Dun Morhen
 
+https://www.youtube.com/watch?v=CpmAD4gcLMo
+
 This is a temperate forrested type of island that is rather large. It has no port towns, and it's residents tend to live self sustaining life styles. In the center of this island is the School of the Roc.
 
 The School of the Roc is an ancient elven ruin inhabited by the students of the School of the Roc. Highly skilled warriors.
@@ -31,10 +33,24 @@ EVIL GROUP NOTE:
     In the ancient elven ruin, is the bloody aftermath of some fierce battle. Seven corpses of elves, humans, and a half orc are about the ground. A large tapestry flies from utop an 10ft iron pole in the center (Luthadel). 
     
     Letho-Head is recognizable but looks as if his body melted into a black thick goo burnt solid.
+        -[Order of the Gauntlet] badge
+        -Dimeritium LongSword
     Marren-Intense burns and charred flesh
+        -Great Sword
+        -[Roc Training Notebook] on the training requirements for the School of the Roc            
     Grund-Intense burns and charred flesh
+        -Great Axe
     Ferionia Vie-stabbed in the abdomen in a bush
+        -7th level Spell that can contain dark waters 
+        -Quarter Staff
+    Nifle Vanhivener
+        -Quarter Staff    
     Varneth-Intense burns and charred flesh
+        -Jolly roger flag of the Nightwraith pirates
+        -Long Bow
     Martin Terratio-claw marks accross the chest
+        -A letter from Ferionia Vie
+            "We need your help, the dark waters have grown stronger, 
+            we don't know what's causing this. Please come to the School of the Roc as soon as you can"
     
     
