--- a/OneWiki/data/Edan.wiki
+++ b/OneWiki/data/Edan.wiki
@@ -3,3 +3,5 @@
 Human Fighter who is in a criminal network, with his main point of contact being [Renegade Leader Kelsier]
 
 He consumed the Iksar [AkumaFruits], which is triggered off of doing intelligent acts.
+
+Has achieved level 3 attunement to [Regdars Radiant Hilt]
