adding group three notes

--- a/OneWiki/data/Ak%27anon.wiki
+++ b/OneWiki/data/Ak%27anon.wiki
@@ -29,6 +29,7 @@ Ak'anon is not lead by a single ruler, but a council of influencial individuals.
 Ak'anon has no wildlife, as there is no "wilderness"    
     
 There are many points of interest in Ak'anon:
+-Dock Area has a 4ft clearance, filled with crates and busy gnomes
 -The Giant's Peak (bar/inn for travelers) - no food - Frug(M)
     -8s per night ( comfortable )
     -common wine - 2s
